# Rust-mysql

./: Makefile.PL
ffi/: Cargo.toml
ffi/src/: lib.rs
lib/DBD/: rmysql.pm  rust_mysql.pm
lib/DBD/rmysql/: Attribs.pm  Error.pm
lib/Rust/: mysql.pm
lib/Rust/mysql/: Attribs.pm  Error.pm
rmysql/: Cargo.toml  hello  hello.c  rmysql.h
rmysql/src/: lib.rs  rmysql.h
t/: basic.t
t/dbd/: dbi.t
