[package]
name = "rust_mysql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
flate2 = "1.0.30"
mysql = { version = "25.0.1", default-features = false, features = ["rustls", "webpki", "minimal-rust", "webpki-roots", "rustls-tls"] }
rustls = "0.23.9"
syn = { version = "2.0.66", features = ["visit", "full", "extra-traits"] }
